--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Duo MindMap</title>
-  </head>
-  <body>
-    <h1>Duo MindMap</h1>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<title>Duo MindMap</title>
+	</head>
+	<body>
+		<div class="app-name">Duo MindMap</div>
+	</body>
 </html>
