--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -5,6 +5,14 @@
 		<title>Duo MindMap</title>
 	</head>
 	<body>
-		<div class="app-name">Duo MindMap</div>
+		<div class="app-name">
+			<div>
+				<a
+					href="https://github.com/MichaelDuo/duo-mindmap"
+					target="_blank"
+					>duo-mindmap</a
+				>
+			</div>
+		</div>
 	</body>
 </html>
