--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -7,10 +7,8 @@
 	<body>
 		<div class="app-name">
 			<div>
-				<a
-					href="https://github.com/MichaelDuo/duo-mindmap"
-					target="_blank"
-					>duo-mindmap</a
+				<a href="https://github.com/MichaelDuo/mindmap" target="_blank"
+					>MichaelDuo/mindmap</a
 				>
 			</div>
 		</div>
