fix drag and drop bugs

--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
 			};
 			window.onload = function () {
 				var el = document.getElementById('app');
-				var mindmap = new MindMap({data: data});
+				var mindmap = new MindMap({data: data3});
 				mindmap.mount(el);
 				window.mindmap = mindmap
 			};
